@@ -1,8 +1,12 @@
-2025-11-20  Charlie Zender  <zender@uci.edu>
+2025-12-02  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.3.7-alpha02 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.3.7-alpha02: Black-eyed P\'s';git push
-	git tag -a 5.3.7-alpha02 -m 'ncks: jsn att/var fmt fix';git push --tags
+	git tag -a 5.3.7-alpha02 -m 'ncremap: hone nco_mss_val_get_dbl()-suggested ncatted command; ncks: jsn att/var fmt fix';git push --tags
+
+	* Improve suggested ncatted command when mss_val_dbl = NaN in nco_mss_val_get_dbl()
+
+2025-11-20  Charlie Zender  <zender@uci.edu>
 
 	* Fix variable JSON format to always be type = 2 and print type, shape
 
